--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,20 @@ repositories {
 }
 
 dependencies {
+
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+
+	//jdbc 템플릿
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	//H2 데이터베이스 추가
+	runtimeOnly 'com.h2database:h2'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 
 	//테스트에서 lombok 사용
 	testCompileOnly 'org.projectlombok:lombok'
